--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nightwatch-sample",
+  "name": "pathfinding-peril",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test":  "node_modules/.bin/nightwatch"
+    "test": "node_modules/.bin/nightwatch"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "nightwatch": "^0.9.4",
+    "request": "^2.72.0",
     "serve-favicon": "~2.3.0"
   }
 }
