--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "marked": "^0.3.5",
     "morgan": "~1.7.0",
     "nightwatch": "^0.9.4",
+    "pusher": "^1.3.0",
     "request": "^2.72.0",
     "serve-favicon": "~2.3.0"
   }
